force-app/main/default/objects/Freight_Filter_Keywords__mdt/Freight_Filter_Keywords__mdt.object-meta.xml
<CustomObject>
    <description>FCRM-939 
Custom Meta Data to store the values of keywords that should be considered for Freight Overridden Cases Closure.</description>
    <label>Freight Filter Keywords</label>
    <pluralLabel>Freight Filter Keywords</pluralLabel>
</CustomObject>