force-app/main/default/objects/Freight_Filter_Keywords__mdt/fields/Freight_Body__c.field-meta.xml
<CustomField>
    <fullName>Freight_Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>