force-app/main/default/objects/Freight_Filter_Keywords__mdt/fields/Freight_CC_Address__c.field-meta.xml
<CustomField>
    <fullName>Freight_CC_Address__c</fullName>
    <label>CC Address</label>
    <type>TextArea</type>
</CustomField>