force-app/main/default/objects/Freight_Filter_Keywords__mdt/fields/Freight_Exception_From__c.field-meta.xml
<CustomField>
    <fullName>Freight_Exception_From__c</fullName>
    <label>Exception From Address</label>
    <type>TextArea</type>
</CustomField>