force-app/main/default/objects/Freight_Filter_Keywords__mdt/fields/Freight_from__c.field-meta.xml
<CustomField>
    <fullName>Freight_from__c</fullName>
    <label>From</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>