force-app/main/default/objects/Freight_Filter_Keywords__mdt/fields/Freight_Mailbox_Name__c.field-meta.xml
<CustomField>
    <fullName>Freight_Mailbox_Name__c</fullName>
    <description>FCRM-939

Freight - Inbox rules overridden filter keywords - the mailbox name</description>
    <label>Freight Mailbox Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FRT Bookings</fullName>
                <default>true</default>
                <label>FRT Bookings</label>
            </value>
            <value>
                <fullName>FRT Cust Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>