force-app/main/default/objects/Freight_Filter_Keywords__mdt/fields/Freight_Subject__c.field-meta.xml
<CustomField>
    <fullName>Freight_Subject__c</fullName>
    <label>Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>