force-app/main/default/objects/Freight_Filter_Keywords__mdt/fields/Freight_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Freight_To_Address__c</fullName>
    <label>To Address</label>
    <type>TextArea</type>
</CustomField>