force-app/main/default/objects/Freight_Filter_Keywords__mdt/fields/Freight_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_Type__c</fullName>
    <description>FCRM-939
To store filter keywords for Subject</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only subject</fullName>
                <default>true</default>
                <label>Only subject</label>
            </value>
            <value>
                <fullName>Subject or body</fullName>
            </value>
            <value>
                <fullName>From and Subject</fullName>
            </value>
            <value>
                <fullName>CC Address</fullName>
            </value>
            <value>
                <fullName>Subject or body with From Address Exception</fullName>
            </value>
            <value>
                <fullName>From Address</fullName>
            </value>
            <value>
                <fullName>To Address</fullName>
            </value>
            <value>
                <fullName>From Address and Subject or Body</fullName>
            </value>
            <value>
                <fullName>From Address and Body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>