force-app/main/default/objects/Freight_Filter_Keywords__mdt/listViews/New_View.listView-meta.xml
<ListView>
    <fullName>New_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Freight_Exception_From__c</columns>
    <columns>Freight_Mailbox_Name__c</columns>
    <columns>Freight_from__c</columns>
    <columns>Freight_Subject__c</columns>
    <columns>Freight_Type__c</columns>
    <columns>Freight_To_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>New View</label>
    <language>en_US</language>
</ListView>